force-app/main/default/objects/Skill_Group_Association__c/Skill_Group_Association__c.object-meta.xml
<CustomObject>
    <label>Skill Group Association</label>
    <nameField>
        <displayFormat>SGA-{00000000}</displayFormat>
        <label>Skill Group Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Group Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>