force-app/main/default/objects/Skill_Group_Association__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LegacyID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>