force-app/main/default/objects/Skill_Group_Association__c/fields/OpaGroupID__c.field-meta.xml
<CustomField>
    <fullName>OpaGroupID__c</fullName>
    <externalId>true</externalId>
    <label>OpaGroupID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>