force-app/main/default/objects/Skill_Group_Association__c/fields/OpaSkillID__c.field-meta.xml
<CustomField>
    <fullName>OpaSkillID__c</fullName>
    <externalId>true</externalId>
    <label>OpaSkillID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>