force-app/main/default/objects/Skill_Group_Association__c/fields/Professional_Skill__c.field-meta.xml
<CustomField>
    <fullName>Professional_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Skill Group Associations</relationshipLabel>
    <relationshipName>Skill_Group_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>