force-app/main/default/objects/Skill_Group_Association__c/fields/Skill_Group__c.field-meta.xml
<CustomField>
    <fullName>Skill_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Group</label>
    <referenceTo>Skill_Group__c</referenceTo>
    <relationshipLabel>Skill Group Associations</relationshipLabel>
    <relationshipName>Skill_Group_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>